--- a/templates/instances.html
+++ b/templates/instances.html
@@ -216,8 +216,19 @@
                                 + "</td>");
                     }
                     if (data[i]['status'] == 5) {
+                        if (data[i]['dump'] === 1) {
+                            var btn = "<button class='btn btn-sm btn-default' type='submit' name='deletesaveimage' title='{% trans "Delete Save Image" %}'>"
+                                    + "<span class='glyphicon glyphicon-remove'></span>"
+                                    + "</button> ";
+                            var stat = "<td><span class='label label-warning'>{% trans "Saved" %}</span></td>";
+                        } else {
+                            var btn = "<button class='btn btn-sm btn-default disabled' title='{% trans "Shutdown" %}'>"
+                                    + "<span class='glyphicon glyphicon-off'></span>"
+                                    + "</button> ";
+                            var stat = "<td><span class='label label-danger'>{% trans "Shutoff" %}</span></td>";
+                        }
                         $(elem).html("<td><a href='/instance/{{ host_id }}/" + data[i]['name'] + "'><i class='icon-th-large'></i> " + data[i]['name'] + "</a></td>"
-                                + "<td><span class='label label-danger'>{% trans "Shutoff" %}</span></td>"
+                                + stat
                                 + "<td>" + data[i]['vcpu'] + "</td>"
                                 + "<td>" + data[i]['memory'] + "{% trans "MB" %}</td>"
                                 + "<td>"
@@ -232,9 +243,7 @@
                                 + "<button class='btn btn-sm btn-default disabled' title='{% trans "Save" %}'>"
                                 + "<span class='glyphicon glyphicon-download-alt'></span>"
                                 + "</button> "
-                                + "<button class='btn btn-sm btn-default disabled' title='{% trans "Shutdown" %}'>"
-                                + "<span class='glyphicon glyphicon-off'></span>"
-                                + "</button> "
+                                + btn
                                 + "<button class='btn btn-sm btn-default disabled' title='{% trans "Force Shutdown" %}'>"
                                 + "<span class='glyphicon glyphicon-stop'></span>"
                                 + "</button> "
